objects/vlocity_cmt__SystemInterface__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__GlobalKey__c</fullName>
        <description>The globally unique identifier of the Product. Used to identify the product across Salesforce instances.</description>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Implementation__c</fullName>
        <label>Implementation</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Key__c</fullName>
        <formula>vlocity_cmt__SystemId__r.Name &amp; &quot;:&quot; &amp; Name</formula>
        <label>Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Path__c</fullName>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SystemId__c</fullName>
        <label>System</label>
        <referenceTo>vlocity_cmt__System__c</referenceTo>
        <relationshipLabel>System</relationshipLabel>
        <relationshipName>SystemInterfaces</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>System Interface</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>System Interface Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Interfaces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>